// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot w/ auth & error 1`] = `
<div>
  <h2>
    Add Comment
  </h2>
  <p>
    test error
  </p>
  <form
    className="new-reply-form"
    onSubmit={[Function]}
  >
    <textarea
      className="new-reply-form__text"
      id="text"
      name="text"
      onChange={[Function]}
      placeholder="This is so cool!"
      value=""
    />
    <button
      className="btn"
    >
      Comment
    </button>
  </form>
</div>
`;

exports[`matches snapshot w/out auth 1`] = `
<div>
  Login to leave a comment.
</div>
`;

exports[`w/ auth matches snapshot w auth 1`] = `
<div>
  <h2>
    Add Comment
  </h2>
  <p />
  <form
    className="new-reply-form"
    onSubmit={[Function]}
  >
    <textarea
      className="new-reply-form__text"
      id="text"
      name="text"
      onChange={[Function]}
      placeholder="This is so cool!"
      value=""
    />
    <button
      className="btn"
    >
      Comment
    </button>
  </form>
</div>
`;
